css/style.css
:root
{
	--main-background-color: #09154f;
	--epidemic-green: #00a94f;
	--board-width-percentage: 80.5%;
	--button-background: #0e7aa8;
	--button-background-bright: #1799d1;
}
*
{
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	box-sizing: border-box;
	font-size: 100%;
	vertical-align: baseline;
	background: transparent;
	cursor: default;
}
html
{
	height: 100%;
	background-repeat:no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}
html.blueGradient
{ background: linear-gradient(to bottom right, #054583, #072560, var(--main-background-color)) }
body
{
	font-family: 'Electrolize', sans-serif;
	color: #fff;
	font-size: 16px;
	
	position: relative;
	overflow-x: hidden;
	overflow-y: hidden;
	
	-webkit-touch-callout: none; /* iOS Safari */
	-webkit-user-select: none;   /* Chrome/Safari/Opera */
	-khtml-user-select: none;    /* Konqueror */
	-moz-user-select: none;      /* Firefox */
	-ms-user-select: none;       /* Internet Explorer/Edge */

	min-width: 1024px;
	max-width: 1920px;
}
input, select { background-color: #fff }
input[type='text'],
input[type='password']
{ cursor: text }
#lobby {
	--lobby-padding: 30px;
	--lobby-full-width: 560px;
	--lobby-content-width: 480px;
	--lobby-control-border-radius: 4px;

	padding: var(--lobby-padding);
	padding-right: 0;
	background: transparent;
}
#lobby,
#lobby .button
{ font-family: 'Ropa sans', sans-serif }
#header
{
	width: var(--lobby-full-width);
	filter: drop-shadow(5px 5px 5px #000);
}
#header p { padding-bottom: 4px }
#header *
{ margin-left: var(--lobby-padding) }
#header > div
{
	background: linear-gradient(to right, var(--epidemic-green), #008D41);
	margin-left: calc(-1 * var(--lobby-padding));
	clip-path: polygon(0 0, var(--lobby-full-width) 0, calc(var(--lobby-padding) + var(--lobby-content-width)) 100%, 0 100%);
}
#header h1
{
	font-family: 'Audiowide', sans-serif;
	font-size: 40px;
}
#lobby #header,
#lobby form
{
	margin-bottom: var(--lobby-padding);
}
#lobby form > label, .inlineButton
{
	font-size: 20px;
}
#lobby input:not([type='radio']),
.inlineButton
{ height: 24px }
#lobby .content > h1, #lobby h2
{
	font-family: 'Audiowide';
	font-weight: 400;
}
#lobby .content > h1
{
	font-size: 30px;
}
#lobby .content > p
{
	margin-bottom: calc(var(--lobby-padding)/2);
}
#lobby h2
{
	font-size: 22px;
	margin: calc(var(--lobby-padding)*2) 0 6px 0;
}
#lobby form:not(.inlineForm) > *
{
	display: block;
}
#lobby form:not(.inlineForm) *:not(label)
{
	border-radius: var(--lobby-control-border-radius);
}
#lobby form:not(.inlineForm) input, #lobby form:not(.inlineForm) .button
{
	width: calc(var(--lobby-content-width)*0.5);
}
#lobby form:not(.inlineForm) label
{
	margin-top: 8px;
}
#lobby .button:not(#btnAttemptAccess):not(#btnVerify)
{
	font-size: 26px;
	line-height: 26px;
	height: 46px;
	overflow: visible;
	padding: 10px 0;
}
#btnLogIn, #btnCreateAccount
{
	font-size: 26px;
	padding: 4px 0;
	margin: 16px 0 0 0;
}
.inlineForm,
.nowrap
{
	white-space: nowrap;
}
.inlineForm > *
{
	vertical-align: middle;
}
.inlineForm label { width: calc(var(--lobby-content-width) * 0.3) }
#lobby .validationError
{
	color: #ef282a;
	font-size: 16px;
}
.validationError::before
{
	content: "* ";
}
.inlineForm .validationError
{
	position: absolute;
	margin-left: calc(var(--lobby-content-width) * 0.3)
}
.inlineForm input[type='text']
{
	border-top-left-radius: 4px;
	border-bottom-left-radius: 4px;
	padding: 0 2px;
	text-align: center;
}
.inlineForm .inlineButton
{
	display: inline-block;
	width: auto;
	padding: 2px 4px;
	margin-left: -3px;
	border-top-right-radius: var(--lobby-control-border-radius);
	border-bottom-right-radius: var(--lobby-control-border-radius);
}
.inlineForm .loadingGif
{
	display: inline-block;
	width: 23px;
	margin-bottom: -3px;
	margin-left: 2px;
}
.inlineForm .loadingGif img { width: 100%; padding: 0 }
#btnAttemptAccess
{
	font-size: 22px;
	line-height: 22px;
}
#disclaimer { width: var(--lobby-content-width) }

#txtVerificationCode,
#btnVerify
{ width: 100px }
.divInputControl
{
	display: block;
	margin-bottom: 32px;
}
.divInputControl label
{
	font-size: 18px;
}
#lobby .subtitle { font-size: 20px }
input[type='radio'] { margin: 10px 5px 0 0 }
select
{
	margin-left: 5px;
	border-radius: var(--lobby-control-border-radius);
}
#btnPlay,
#gameInProgress .button
{
	font-family: 'Audiowide', 'Ropa sans', sans-serif !important;
	width: var(--lobby-content-width);
	margin-left: 0;
	border-radius: var(--lobby-control-border-radius);
}
#lobby .button .loadingGif
{
	width: 80%;
	margin-left: 10%;
	margin-top: 16px;
}
#lobby .button .loadingGif img { width: 30px }
#lobby .button.btnDisabled
{
	background-color: #0a597a;
	color: #aaa;
}
#gameInProgress { width: var(--lobby-content-width) }
#gameInProgress > div:not(.button)
{
	display: inline-block;
	vertical-align: top;
	margin: 15px;
	margin-left: 0;
}
#gameInProgress h3
{
	font-weight: 400;
	font-family: 'Audiowide', sans-serif;
	font-size: 22px;
	width: var(--lobby-content-width);
}
#gameInProgress > div > p
{
	font-size: 20px;
	margin-top: 5px;
	border-bottom: 2px solid #fff;
}
#gameInProgress .roleTag
{
	display: inline-block;
	padding: 2px 5px;
	margin-top: 5px;
	cursor: default;
}
#gameInProgress .roleTag:hover { text-decoration: none }
#gameInProgress .button
{
	display: inline-block;
	width: 40%;
	font-size: 20px;
}
#btnResumeGame,
#btnConfirmAbandon
{ margin-right: 2% }
#btnAbandonGame { background-color: rgb(204, 26, 29) }
#btnAbandonGame:hover { background-color: #ef282a;}

.smallText { font-size: 12px }
.largeText { font-size: 18px }
.whiteText { color: #fff !important }
.italics { font-style: italic }
#container
{
	min-width: 1024px;
	max-width: 1920px;
}
html,
#curtain,
.veil,
.darkBlueBackground
{ background-color: var(--main-background-color) }
.centeredText { text-align: center }
#curtain
{
	position: fixed;
	width: 100%;
	height: 1080px;
	z-index: 50;
	padding: 5px;
}
/* ... */

